# ddnet-accounts

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: build.yml
lib/ddnet-account-client/: Cargo.toml
lib/ddnet-account-client-http-fs/: Cargo.toml
lib/ddnet-account-client-http-fs/src/: cert_downloader.rs  client.rs  fs.rs  http.rs  lib.rs  profiles.rs
lib/ddnet-account-client-reqwest/: Cargo.toml
lib/ddnet-account-client-reqwest/src/: client.rs
lib/ddnet-account-client/src/: account_info.rs  account_token.rs  certs.rs  credential_auth_token.rs  delete.rs  errors.rs  interface.rs  lib.rs  link_credential.rs  login.rs  logout.rs  logout_all.rs  safe_interface.rs  sign.rs  unlink_credential.rs
lib/ddnet-account-game-server/: Cargo.toml
lib/ddnet-account-game-server/src/: auto_login.rs  db.rs  lib.rs  prepare.rs  rename.rs  setup.rs  shared.rs
lib/ddnet-account-game-server/src/auto_login/: queries.rs
lib/ddnet-account-game-server/src/auto_login/mysql/: try_insert_user.sql
lib/ddnet-account-game-server/src/auto_login/sqlite/: try_insert_user.sql
lib/ddnet-account-game-server/src/rename/: queries.rs
lib/ddnet-account-game-server/src/rename/mysql/: try_rename.sql
lib/ddnet-account-game-server/src/rename/sqlite/: try_rename.sql
lib/ddnet-account-game-server/src/setup/mysql/: user.sql
lib/ddnet-account-game-server/src/setup/sqlite/: user.sql
lib/ddnet-account-game-server/src/tests/: sqlite.rs
lib/ddnet-account-sql/: Cargo.toml
lib/ddnet-account-sql/src/: any.rs  lib.rs  query.rs  version.rs
lib/ddnet-account-sql/src/version/mysql/: set_version.sql  version.sql
lib/ddnet-account-sql/src/version/sqlite/: get_version.sql  set_version.sql  version.sql
lib/ddnet-account-sql/src/version/sqlite/delete/: version.sql
lib/ddnet-accounts-shared/: Cargo.toml
lib/ddnet-accounts-shared/src/: cert.rs  lib.rs
lib/ddnet-accounts-shared/src/account_server/: account_info.rs  account_token.rs  cert_account_ext.rs  certs.rs  credential_auth_token.rs  errors.rs  login.rs  mod.rs  otp.rs  result.rs  sign.rs
lib/ddnet-accounts-shared/src/client/: account_data.rs  account_info.rs  account_token.rs  credential_auth_token.rs  delete.rs  hash.rs  link_credential.rs  login.rs  logout.rs  logout_all.rs  machine_id.rs  mod.rs  sign.rs  unlink_credential.rs
lib/ddnet-accounts-shared/src/game_server/: mod.rs  user_id.rs
lib/ddnet-accounts-types/: Cargo.toml
lib/ddnet-accounts-types/src/: account_id.rs  lib.rs
src/: account_info.rs  account_token.rs  certs.rs  credential_auth_token.rs  db.rs  delete.rs  email.rs  email_limit.rs  file_watcher.rs  ip_limit.rs  link_credential.rs  login.rs  logout.rs  logout_all.rs  main.rs  setup.rs  shared.rs  sign.rs  steam.rs  types.rs  unlink_credential.rs  update.rs
src/account_info/: queries.rs
src/account_info/mysql/: account_info.sql
src/account_token/: queries.rs
src/account_token/mysql/: account_token_data.sql  add_account_token_email.sql  add_account_token_steam.sql  invalidate_account_token.sql
src/certs/: queries.rs
src/certs/mysql/: add_cert.sql  get_certs.sql
src/credential_auth_token/: queries.rs
src/credential_auth_token/mysql/: add_credential_auth_token.sql
src/delete/: queries.rs
src/delete/mysql/: rem_account.sql
src/link_credential/: queries.rs
src/link_credential/mysql/: unlink_credential_email.sql  unlink_credential_steam.sql
src/login/: queries.rs
src/login/mysql/: account_id_from_email.sql  account_id_from_last_insert.sql  account_id_from_steam.sql  add_account.sql  add_session.sql  credential_auth_token_data.sql  invalidate_credential_auth_token.sql  link_credential_email.sql  link_credential_steam.sql
src/logout/: queries.rs
src/logout/mysql/: rem_session.sql
src/logout_all/: queries.rs
src/logout_all/mysql/: rem_sessions_except.sql
src/setup/mysql/: account.sql  account_tokens.sql  certs.sql  credential_auth_tokens.sql  credential_email.sql  credential_steam.sql  session.sql
src/setup/mysql/delete/: account_tokens.sql  certs.sql  credential_auth_tokens.sql  credential_email.sql  credential_steam.sql
src/sign/: queries.rs
src/sign/mysql/: auth.sql
src/tests/: credential_auth_token.rs  full.rs  ip_ban.rs  link_credential.rs  login.rs  mod.rs  multi_url.rs  signing_certs.rs  types.rs  unlink_credential.rs
src/tests/game_server/: rename.rs
src/unlink_credential/: queries.rs
src/unlink_credential/mysql/: unlink_credential_email.sql  unlink_credential_steam.sql
src/update/: queries.rs
src/update/mysql/: cleanup_account_tokens.sql  cleanup_certs.sql  cleanup_credential_auth_tokens.sql
templates/email/: template.html
