[package]
name = "ddnet-account-game-server"
version = "0.1.0"
edition = "2021"
authors = ["Jupeyy"]
license = "MIT OR Apache-2.0"
description = "The account related operations of a game server, that want to manage accounts."
repository = "https://github.com/ddnet/ddnet-accounts"

[dependencies]
ddnet-accounts-types = { version = "0.1.0", path = "../ddnet-accounts-types" }
ddnet-accounts-shared = { version = "0.1.0", path = "../ddnet-accounts-shared" }
ddnet-account-sql = { version = "0.1.0", path = "../ddnet-account-sql" }

# https://github.com/launchbadge/sqlx/issues/2636
sqlx = { version = "=0.6.3", features = ["mysql", "any", "runtime-tokio-rustls", "chrono"] }
anyhow = { version = "1.0.86", features = ["backtrace"] }
async-trait = "0.1.81"
thiserror = "1.0.63"
