[package]
name = "ddnet-account-game-server"
version = "0.3.0"
edition = "2021"
authors = ["Jupeyy"]
license = "MIT OR Apache-2.0"
description = "The account related operations of a game server, that want to manage accounts."
repository = "https://github.com/ddnet/ddnet-accounts"

[dependencies]
ddnet-accounts-types = { version = "0.1.0", path = "../ddnet-accounts-types" }
ddnet-accounts-shared = { version = "0.2.0", path = "../ddnet-accounts-shared" }
ddnet-account-sql = { version = "0.3.0", path = "../ddnet-account-sql", default-features = false }

sqlx = { version = "0.8.2", features = ["any", "runtime-tokio-rustls", "chrono"] }
anyhow = { version = "1.0.93", features = ["backtrace"] }
async-trait = "0.1.83"
thiserror = "2.0.3"

[dev-dependencies]
tokio = { version = "1.41.1", features = ["rt-multi-thread", "sync", "fs", "time", "macros"] }
anyhow = { version = "1.0.93", features = ["backtrace"] }

[features]
mysql = ["ddnet-account-sql/mysql", "sqlx/mysql"]
sqlite = ["ddnet-account-sql/sqlite", "sqlx/sqlite"]

default = ["mysql"]
