[package]
name = "ddnet-accounts-shared"
version = "0.1.0"
edition = "2021"
authors = ["Jupeyy"]
license = "MIT OR Apache-2.0"
description = "Most account related types shared accross all libs & bins."
repository = "https://github.com/ddnet/ddnet-accounts"

[dependencies]
ddnet-accounts-types = { version = "0.1.0", path = "../ddnet-accounts-types" }

argon2 = "0.5.3"
ed25519-dalek = { version = "2.1.1", features = ["serde", "rand_core", "pkcs8", "pem"] }
rand = { version = "0.8.5", features = ["getrandom"], default-features = false }
anyhow = { version = "1.0.93", features = ["backtrace"] }
serde = { version = "1.0.215", features = ["derive"] }
email_address = { version = "0.2.9", features = ["serde"] }
generic-array = { version = "1.1.1", features = ["serde"] }
rcgen = { version = "0.13.1" }
hex = "0.4.3"
chrono = { version = "0.4.38", features = ["serde"] }
x509-cert = { version = "0.2.5" }
spki = { version = "0.7.3", features = ["fingerprint"] }
const-oid = "0.9.6"
der = { version = "0.7.9", features = ["derive"] }
ecdsa = { version = "0.16.9", features = ["digest", "pem"] }
p256 = "0.13.2"
thiserror = "1.0.69"
url = { version = "2.5.4", features = ["serde"] }
strum = { version = "0.26.3", features = ["derive"] }

[target.'cfg(not(any(target_arch = "wasm32", target_os = "android")))'.dependencies]
machine-uid = "0.5.3"
